# rcfvt

./: COPYING  README  README.md  meson.build  rcfvt.conf
src/: ca_plugin.c  ca_plugin.h  config.c  config.h  fdio_full.h  ipc.c  ipc.h  main.c  notify_plugin.c  notify_plugin.h  rcfvtca.c  rcfvtnotify.c  sopt.h
